# privMonad

./: LICENSE  README.md  phiMonad.cabal  privMonad.cabal  stack.yaml
src/: Json.hs  Main.hs  Phi.hs  Priv.hs
