name:                privMonad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/holguinj/phiMonad#readme
author:              Justin Holguin
maintainer:          justin.h.holguin@gmail.com
copyright:           2017
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Priv
  build-depends:       base >= 4.7 && < 5,
                       transformers >= 0.5.2.0

executable privMonad
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Priv
  build-depends:       base >= 4.7 && < 5,
                       transformers >= 0.5.2.0
